--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,15 @@
 buildscript {
     
     repositories {
+
+        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            url 'https://maven.google.com/'
+        }
+        maven {
+            url "https://dl.bintray.com/tencentqcloudterminal/maven"
+        }
         google()
         jcenter()
     }
@@ -21,6 +30,15 @@ buildscript {
 
 allprojects {
     repositories {
+
+        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            url 'https://maven.google.com/'
+        }
+        maven {
+            url "https://dl.bintray.com/tencentqcloudterminal/maven"
+        }
         google()
         jcenter()
     }
