--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:28.+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation project(':Load')
+//    implementation project(':Load')
     implementation(name: 'SelectColorDialog-debug', ext: 'aar')
     implementation "com.github.skydoves:colorpickerview:2.0.2"
 }
