--- a/Load/build.gradle
+++ b/Load/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
 
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -27,7 +27,7 @@ android {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:28.+'
+    api 'com.android.support:appcompat-v7:27.+'
     testImplementation 'junit:junit:4.12'
 //    androidTestApi 'com.android.support.test:runner:1.0.2'
 //    androidTestApi 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -41,6 +41,6 @@ def fileIsExists(String fileName){
     return file.exists();
 }
 if (fileIsExists("help.gradle")){
-//    apply from :'help.gradle'
+    apply from :'help.gradle'
 }
 /***********************编译失败请注释上面代码***********************/
