--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,23 @@ buildscript {
     
     repositories {
 
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
-        maven { url "https://jitpack.io" }
-        google()
         mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            url 'https://maven.google.com/'
+        }
+        maven {
+            url "https://dl.bintray.com/tencentqcloudterminal/maven"
+        }
+        google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:3.2.0'
 
         /***************发布aar包的配置**********************/
-//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         /***************发布aar包的配置**********************/
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -28,13 +31,16 @@ buildscript {
 allprojects {
     repositories {
 
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
-        maven { url "https://jitpack.io" }
-        google()
         mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            url 'https://maven.google.com/'
+        }
+        maven {
+            url "https://dl.bintray.com/tencentqcloudterminal/maven"
+        }
+        google()
+        jcenter()
     }
 }
 
