--- a/Load/build.gradle
+++ b/Load/build.gradle
@@ -24,6 +24,10 @@ android {
 
 }
 
+afterEvaluate {
+    generateReleaseBuildConfig.enabled = false
+    generateDebugBuildConfig.enabled = false
+}
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
