--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
 
         mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
+//        maven {
+//            url 'https://maven.google.com/'
+//        }
         maven {
             url "https://dl.bintray.com/tencentqcloudterminal/maven"
         }
@@ -16,7 +16,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.6.0'
 
         /***************发布aar包的配置**********************/
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
@@ -33,9 +33,9 @@ allprojects {
 
         mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
+//        maven {
+//            url 'https://maven.google.com/'
+//        }
         maven {
             url "https://dl.bintray.com/tencentqcloudterminal/maven"
         }
