增加透明度设置

--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
 
-        mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-//        maven {
-//            url 'https://maven.google.com/'
-//        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+        maven { url "https://jitpack.io" }
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0'
 
         /***************发布aar包的配置**********************/
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         /***************发布aar包的配置**********************/
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -31,16 +28,13 @@ buildscript {
 allprojects {
     repositories {
 
-        mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-//        maven {
-//            url 'https://maven.google.com/'
-//        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
+        maven { url "https://jitpack.io" }
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
