--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,25 @@
 .externalNativeBuild
 !build.gradle
 .idea/
-
-gradle.properties
+_gamefile/assets/
+unityLibrary/assets/
 *.apk
 .svn
 build/
 help.gradle
+local.properties
+build
+outapks
+UMCore
+gradle/
+gradlew
+gradlew.bat
+.bugtags.log
+bugtags.log
+captures/
+apk/
+outapks/
+/_outaars
+/_outapks
+output.json
+release/
