--- a/Load/build.gradle
+++ b/Load/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 31
 
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -31,20 +31,9 @@ afterEvaluate {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:27.+'
+//    api 'com.android.support:appcompat-v7:31.+'
     testImplementation 'junit:junit:4.12'
 //    androidTestApi 'com.android.support.test:runner:1.0.2'
 //    androidTestApi 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-
-/***********************编译失败请注释下面代码***********************/
-def fileIsExists(String fileName){
-    def path = getRootDir().getAbsolutePath();
-    def file=new File(path+"/"+project.name+"/"+fileName);
-    return file.exists();
-}
-if (fileIsExists("help.gradle")){
-    apply from :'help.gradle'
-}
-/***********************编译失败请注释上面代码***********************/
