--- a/Load/build.gradle
+++ b/Load/build.gradle
@@ -31,6 +31,7 @@ afterEvaluate {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 //    api 'com.android.support:appcompat-v7:31.+'
     testImplementation 'junit:junit:4.12'
 //    androidTestApi 'com.android.support.test:runner:1.0.2'
